--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,16 +8,17 @@
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default qna-list">
           <ul class="list">
+              {{#articleList}}
               <li>
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-                              <a href="./qna/show.html">국내에서 Ruby on Rails와 Play가 활성화되기 힘든 이유는 뭘까?</a>
+                              <a href="./qna/show.html">{{title}}</a>
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
                               <span class="time">2016-01-15 18:47</span>
-                              <a href="./user/profile.html" class="author">자바지기</a>
+                              <a href="./user/profile.html" class="author">{{user.userId}}</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
@@ -26,6 +27,8 @@
                       </div>
                   </div>
               </li>
+              {{/articleList}}
+              {{^articleList}}
               <li>
                   <div class="wrap">
                       <div class="main">
@@ -44,6 +47,7 @@
                       </div>
                   </div>
               </li>
+              {{/articleList}}
           </ul>
           <div class="row">
               <div class="col-md-3"></div>
