--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -25,7 +25,7 @@
                       </div>
                   </div>
                   <div class="article-doc">
-                      <p>{{article.content}}</p>
+                      <p>{{{article.content}}}</p>
                   </div>
                   <div class="article-util">
                       <ul class="article-util-list">
