--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -16,7 +16,7 @@
     <div class="col-md-12">
         <div class="navbar-header">
 
-            <a href="../index.html" class="navbar-brand">SLiPP</a>
+            <a th:href="@{/}" class="navbar-brand">SLiPP</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
                 <i class="glyphicon glyphicon-search"></i>
             </button>
@@ -39,7 +39,7 @@
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                     </ul>
                 </li>
-                <li><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                <li><a th:href="@{/users/list}"><i class="glyphicon glyphicon-user"></i></a></li>
             </ul>
         </div>
     </div>
@@ -63,9 +63,9 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="login.html" role="button">로그인</a></li>
-                <li><a href="form.html" role="button">회원가입</a></li>
+                <li class="active"><a th:href="@{/}">Posts</a><li>
+                <li><a th:href="@{/users/login}" role="button">로그인</a></li>
+                <li><a th:href="@{/users/new}" role="button">회원가입</a></li>
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
             </ul>
@@ -84,8 +84,11 @@
               </thead>
               <tbody>
                   <tr th:each="user, iterStat : ${users}">
-                      <th scope="row" th:text="${iterStat.count}"></th> <!-- 자동 증가 번호 -->
-                      <td th:text="${user.id}"></td> <!-- 사용자 아이디 (id 값) -->
+                      <th scope="row" th:text="${iterStat.count}"></th> <!-- 자동 증가 번호(id 값) -->
+                      <td>
+                          <a th:href="@{/users/{userId}(userId=${user.userId})}" th:text="${user.userId}"></a>
+                      </td> <!-- 사용자 이름 (클릭하면 프로필 페이지로 이동) -->
+<!--                      <td th:text="${user.userId}"></td> &lt;!&ndash; 사용자 아이디 (Userid 값) &ndash;&gt;-->
                       <td th:text="${user.name}"></td> <!-- 사용자 이름 -->
                       <td th:text="${user.email}"></td> <!-- 사용자 이메일 -->
                       <td><a th:href="@{/user/edit/{id}(id=${user.id})}" class="btn btn-success" role="button">수정</a></td>
