--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,17 +11,17 @@
 		<![endif]-->
         <link rel="stylesheet" th:href="@{/css/styles.css}">
 	</head>
-	
+
 	<body>
 <nav class="navbar navbar-fixed-top header">
  	<div class="col-md-12">
         <div class="navbar-header">
 
-            <a href="index.html" class="navbar-brand">SLiPP</a>
+            <a th:href="@{/}" class="navbar-brand">SLiPP</a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
           <i class="glyphicon glyphicon-search"></i>
           </button>
-      
+
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse1">
           <form class="navbar-form pull-left">
@@ -32,7 +32,7 @@
                 </div>
               </div>
           </form>
-          <ul class="nav navbar-nav navbar-right">             
+          <ul class="nav navbar-nav navbar-right">
              <li>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
                 <ul class="dropdown-menu">
@@ -40,10 +40,10 @@
                   <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                 </ul>
              </li>
-             <li><a href="user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+             <li><a th:href="@{/users/list}"><i class="glyphicon glyphicon-user"></i></a></li>
            </ul>
-        </div>	
-     </div>	
+        </div>
+     </div>
 </nav>
 <div class="navbar navbar-default" id="subnav">
     <div class="col-md-12">
@@ -54,19 +54,19 @@
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
-            
+
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse2">
             	<span class="sr-only">Toggle navigation</span>
             	<span class="icon-bar"></span>
             	<span class="icon-bar"></span>
             	<span class="icon-bar"></span>
-            </button>            
+            </button>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="index.html">Posts</a></li>
-                <li><a href="user/login.html" role="button">로그인</a></li>
-                <li><a href="user/form.html" role="button">회원가입</a></li>
+                <li class="active"><a th:href="@{/}">Posts</a></li>
+                <li><a th:href="@{/users/login}" role="button">로그인</a></li>
+                <li><a th:href="@{/users/new}" role="button">회원가입</a></li>
                 <!--
                 <li><a href="#loginModal" role="button" data-toggle="modal">로그인</a></li>
                 <li><a href="#registerModal" role="button" data-toggle="modal">회원가입</a></li>
@@ -168,7 +168,7 @@
       <div class="modal-footer">
           <div class="col-md-12">
           <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-      </div>  
+      </div>
       </div>
   </div>
   </div>
@@ -210,7 +210,7 @@
       <div class="modal-footer">
           <div class="col-md-12">
           <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-      </div>  
+      </div>
       </div>
   </div>
   </div>
