--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -62,9 +62,9 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="login.html" role="button">로그인</a></li>
-                <li><a href="../user/form.html" role="button">회원가입</a></li>
+                <li class="active"><a th:href="@{/}">Posts</a></li>
+                <li><a th:href="@{/users/login}" role="button">로그인</a></li>
+                <li><a th:href="@{/users/new}" role="button">회원가입</a></li>
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
             </ul>
@@ -75,22 +75,22 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <form name="question" method="get" action="/user/create">
-              <div class="form-group">
+          <form name="question" method="post" th:action="@{/users/create}" th:object="${userForm}">
+          <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="userId" placeholder="User ID">
+                  <input type="text" class="form-control" id="UserId" th:field="*{userId}" placeholder="User ID" required>
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
-                  <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                  <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="Password" required>
               </div>
               <div class="form-group">
                   <label for="name">이름</label>
-                  <input class="form-control" id="name" name="name" placeholder="Name">
+                  <input class="form-control" id="name" th:field="*{name}" placeholder="Name" required>
               </div>
               <div class="form-group">
                   <label for="email">이메일</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                  <input type="text" class="form-control" id="email" th:field="*{email}" placeholder="Email" required>
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
               <div class="clearfix" />
