--- a/src/main/resources/templates/article/index.html
+++ b/src/main/resources/templates/article/index.html
@@ -94,8 +94,7 @@
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-<!--                              <a th:href= "static/qna/show.html" th:text="${article.title}">제목</a>-->
-                              <td th:text="${article.title}">제목</td>
+                              <a th:href="@{/articles/{index}(index=${article.index})}" th:text="${article.title}"></a>
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
