--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -87,7 +87,7 @@
                         <a class="thumbnail pull-left" href="#">
                             <img class="media-object" src="../../static/images/80-text.png">
                         </a>
-                        <div class="media-body">
+                        <div class="media-body" th:if="${user != null}">
                             <h4 class="media-heading" th:text="${user.name}">사용자 이름</h4>
                             <p>
                                 <a href="#" class="btn btn-xs btn-default">
@@ -96,6 +96,7 @@
                                 </a>
                             </p>
                         </div>
+                        <p th:if="${user == null}">사용자 정보를 찾을 수 없습니다.</p>
                     </div>
                 </div>
             </div>
