--- a/src/main/resources/templates/user/update-form.html
+++ b/src/main/resources/templates/user/update-form.html
@@ -13,12 +13,12 @@
                   <input type="text" class="form-control text-primary bg-light" id="userId" name="userId" value="{{userId}}" readonly>
               </div>
               <div class="form-group">
-                  <label for="current-password">현재 비밀번호</label>
-                  <input type="password" class="form-control" id="current-password" name="current_password" placeholder="Password">
+                  <label for="password">현재 비밀번호</label>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Password">
               </div>
               <div class="form-group">
-                  <label for="password">변경할 비밀번호</label>
-                  <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                  <label for="changed-password">변경할 비밀번호</label>
+                  <input type="password" class="form-control" id="changed-password" name="changedPassword" placeholder="Password">
               </div>
               <div class="form-group">
                   <label for="name">이름</label>
