--- a/src/main/resources/templates/user/update-form.html
+++ b/src/main/resources/templates/user/update-form.html
@@ -7,7 +7,7 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/user/updateForm">
+          <form name="question" method="post" action="/user/update">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
                   <input type="text" class="form-control text-primary bg-light" id="userId" name="userId" value="{{userId}}" readonly>
