--- a/src/main/resources/templates/user/update-form.html
+++ b/src/main/resources/templates/user/update-form.html
@@ -8,6 +8,7 @@
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="/user/update">
+              <input type="hidden" name="_method" value="PUT" />
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
                   <input type="text" class="form-control text-primary bg-light" id="userId" name="userId" value="{{userId}}" readonly>
