--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -81,12 +81,15 @@
                 <div class="well well-sm">
                     <div class="media">
                         <a class="thumbnail pull-left" href="#">
-                            <img class="media-object" src="../../static/images/80-text.png">
+                            <img class="media-object" src="/images/80-text.png">
                         </a>
                         <div class="media-body">
-                            <h4 class="media-heading">자바지기</h4>
+                            <h4 class="media-heading" th:text="${user.name}">사용자 이름</h4>
                             <p>
-                                <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-envelope"></span>&nbsp;javajigi@slipp.net</a>
+                                <a href="#" class="btn btn-xs btn-default">
+                                    <span class="glyphicon glyphicon-envelope"></span>&nbsp;
+                                    <span th:text="${user.email}">이메일</span>
+                                </a>
                             </p>
                         </div>
                     </div>
