--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -89,7 +89,7 @@
                   <td th:text="${user.name}">자바지기</td>
                   <td th:text="${user.email}">javajigi@sample.net</td>
                   <td>
-                      <a href="#" class="btn btn-success" role="button">수정</a>
+                      <a th:href="@{/users/{userId}(userId=${user.userId})}" class="btn btn-success" role="button">수정</a>
                   </td>
               </tr>
 
