--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,7 +12,7 @@
             <!-- 로그인한 경우 -->
             <div th:if="${session.sessionedUser != null}">
                 <a href="/users/sign-out" class="btn">로그아웃</a>
-                <a th:href="@{/users/{id}/update(id=${session.sessionedUser.get().id})}" class="btn">개인정보 수정</a>
+                <a th:href="@{/users/{id}/update(id=${session.sessionedUser.id})}" class="btn">개인정보 수정</a>
                 <a href="/articles/form" class="btn write-btn">글쓰기</a>
             </div>
         </div>
