--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,6 +6,25 @@
 </head>
 <body>
 <main layout:fragment="content">
+  <div class="container d-flex justify-content-center" id="main">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="panel panel-default">
+        <h1 class="text-center">글 목록</h1>
+        <table class="table table-hover">
+          <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>내용</th>
+          </tr>
+          <tr th:each="article, stat : ${articles}">
+            <td th:text="${stat.count}"></td>
+            <td th:text="${article.title}"></td>
+            <td th:text="${article.content}"></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
 </main>
 </body>
 </html>
