--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
 <header th:fragment="header">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">Codestagram</a>
+      <a class="navbar-brand" href="/">Codestagram</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,6 +16,7 @@
       <div class="d-flex justify-content-end">
         <a class="btn btn-primary" th:href="@{/users/login}">로그인</a>
         <a class="btn" th:href="@{/users/form}">회원가입</a>
+        <a class="btn" th:href="@{/article/write}">글 작성</a>
       </div>
     </div>
   </nav>
