--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,18 +47,14 @@
                     <div th:if="${param.logout}" class="alert alert-info">
                         로그아웃되었습니다.
                     </div>
-                    <form th:action="@{/login}" method="post">
+                    <form th:action="@{/auth/login}" method="post">
                         <div class="mb-3">
-                            <label for="username" class="form-label">이메일</label>
-                            <input type="email" class="form-control" id="username" name="username" required>
+                            <label for="userId" class="form-label">아이디</label>
+                            <input type="text" class="form-control" id="userId" name="userId" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">비밀번호</label>
                             <input type="password" class="form-control" id="password" name="password" required>
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="remember-me" name="remember-me">
-                            <label class="form-check-label" for="remember-me">로그인 상태 유지</label>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">로그인</button>
                     </form>
